Make website my own
Outreach replaces miscellany
beginnings of teaching and publication

--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 layout: default
 ---
 
-
-
 <div class="home">
 	
 <h1>Welcome</h1>
+
+Academic website for Eric Rexstad,  working at University of St Andrews.
+
+<img src="images/distance-animation.gif"  alt="Code credit David Miller">
+<center><font size=-2>See <a href=https://gist.github.com/dill/2b0c120d5484d338d8ef>here</a> for R code</center><font size=-1>
+
+<p>
+My research involves enhancing software for distance sampling methods involved in the estimation of animal abundance.  A research team is engaged in supporting and extending software that has been in existence for over 20 years.  Fruits of those efforts can be found at the website <a href=http://distancesampling.org>distancesampling.org</a>.
+<p>
+We also conduct training workshops for distance sampling methods.  Complete details of those <a href=http://creem2.st-andrews.ac.uk/distance-sampling-workshops-st-andrews-august-2016-2/>upcoming workshops</a> can be found following the previous link.
+<p>
+Recently we published a text (and <a href=http://www.creem.st-and.ac.uk/DS.M&A/>companion website</a>) entitled <a href=http://www.springer.com/gb/book/9783319192185>Distance sampling: methods and applications</a>, published by Springer.
+<p>
+I am currently engaged in developing a text along with workshop training materials and associated website on spatially-explicit capture-recapture methods.
 	
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc blandit mattis nulla eu cursus. Fusce finibus, orci sit amet tincidunt fermentum, risus ante pharetra nisi, eget tempus tellus tellus ut est. Nunc tempus cursus arcu mattis ultricies. Cras volutpat purus et lectus facilisis tempor. Suspendisse at lorem feugiat, feugiat massa vel, scelerisque dolor. Proin justo nisl, mattis eu sapien in, efficitur fringilla nulla. Phasellus placerat, lacus in venenatis tristique, risus dolor eleifend felis, vitae finibus augue nibh ut libero. Morbi sit amet tincidunt lorem.</p>
 
 </div>
