--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 Academic website for Eric Rexstad,  working at University of St Andrews.
 
 <img src="images/distance-animation.gif"  alt="Code credit David Miller">
-<center><font size=-2>See <a href=https://gist.github.com/dill/2b0c120d5484d338d8ef>here</a> for R code</center><font size=-1>
+<center><font size=-2>See <a href=https://gist.github.com/dill/2b0c120d5484d338d8ef>here</a> for R code (by Dave Miller)</center><font size=-1>
 
 <p>
 My research involves enhancing software for distance sampling methods involved in the estimation of animal abundance.  A research team is engaged in supporting and extending software that has been in existence for over 20 years.  Fruits of those efforts can be found at the website <a href=http://distancesampling.org>distancesampling.org</a>.
