--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@ Academic website for Eric Rexstad,  working at University of St Andrews.
 <p>
 My research involves enhancing software for distance sampling methods involved in the estimation of animal abundance.  A research team is engaged in supporting and extending software that has been in existence for over 20 years.  Fruits of those efforts can be found at the website <a href=http://distancesampling.org>distancesampling.org</a>.
 <p>
-We also conduct training workshops for distance sampling methods.  Complete details of those <a href=http://creem2.st-andrews.ac.uk/distance-sampling-workshops-st-andrews-august-2016-2/>upcoming workshops</a> can be found following the previous link.
+We also conduct training workshops for distance sampling methods.  Complete details of those <a href=https://creem2.st-andrews.ac.uk/intermediate-level-distance-sampling-training-workshop-2017/>upcoming workshops</a> can be found following the previous link.
 <p>
 Recently we published a text (and <a href=http://www.creem.st-and.ac.uk/DS.M&A/>companion website</a>) entitled <a href=http://www.springer.com/gb/book/9783319192185>Distance sampling: methods and applications</a>, published by Springer.
 <p>
-I am currently engaged in developing a text along with workshop training materials and associated website on spatially-explicit capture-recapture methods.
-	
+
 
 </div>
