--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@ My research involves enhancing software for distance sampling methods involved i
 <p>
 We also conduct training workshops for distance sampling methods.  Complete details of those <a href=https://creem2.st-andrews.ac.uk/intermediate-level-distance-sampling-training-workshop-2017/>upcoming workshops</a> can be found following the previous link.
 <p>
-Recently we published a text (and <a href=http://www.creem.st-and.ac.uk/DS.M&A/>companion website</a>) entitled <a href=http://www.springer.com/gb/book/9783319192185>Distance sampling: methods and applications</a>, published by Springer.
+Recently we published a text (and <a href=https://synergy.st-andrews.ac.uk/ds-manda/>companion website</a>) entitled <a href=http://www.springer.com/gb/book/9783319192185>Distance sampling: methods and applications</a>, published by Springer.
 <p>
 
+<ul>
+	<li>Early announcement:  International Statistical Ecology Conference 2018 1-4 July 2018 in St Andrews.
+		<ul><li><a href=http://www.isec2018.org/home>Conference website</a>
+		</ul>
+	</ul>
 
 </div>
